# Next-Millionaire-Game

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc.json  README.md  ROADMAP.md  dev.ps1  package-lock.json  package.json  run_all.ps1
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  README.md  pyproject.toml  requirement.txt
apps/api/src/: index.js
apps/api/src/millionaire_api/: __main__.py  config.py  llm.py  main.py
apps/api/src/millionaire_api.egg-info/: SOURCES.txt  entry_points.txt
apps/api/src/millionaire_api/llm/: __init__.py  anthropic.py  gemini.py  openai.py
apps/web/: .env.example  .eslintrc.cjs  .gitignore  index.html  package.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts
apps/web/public/: README.md
apps/web/src/: index.css  main.tsx
apps/web/src/components/: Button.tsx  Card.tsx  ConfettiBurst.tsx  Header.tsx  Layout.tsx  Lifelines.tsx  LoadingQuestions.tsx  Modal.tsx  PrizeLadder.tsx
apps/web/src/game/: config.ts  reducer.test.ts  reducer.ts  sample.ts  storage.ts  types.ts
apps/web/src/hooks/: useLlmDirect.ts  useSfx.ts  useTts.ts  useTtsDirect.ts
apps/web/src/pages/: Home.tsx  NotFound.tsx  Play.tsx  Results.tsx
apps/web/src/types/: lottie-player.d.ts
