[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "millionaire-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "openai>=1.40.0",        # AzureOpenAI client
  "anthropic>=0.36.0",     # Anthropic SDK
  "python-dotenv>=1.0.1",  # Load .env files
  "requests>=2.32.0",      # HTTP client for TTS proxy
]

[project.scripts]
api-dev = "millionaire_api.__main__:main"
